--- a/project.private.config.json
+++ b/project.private.config.json
@@ -15,7 +15,7 @@
         {
           "name": "pages/index/index",
           "pathName": "pages/index/index",
-          "query": "scene=f32qf2q3fw2",
+          "query": "scene=0274y27fd1qb",
           "scene": 1047
         }
       ]
